tests/integration/snapshots/integration__conformance__n_number_neg_real_without_int_part.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[-.123]
stderr ---
error: expected digit following minus sign, found `.`
 --> stdin:1:2
  |
1 | [-.123]
  |  ^
  |  |
  |  minus sign found here
  |
help: did you mean to add a fraction? consider adding a 0 before the period
  |
1 | [-0.123]
  |   +
