tests/integration/snapshots/integration__conformance__n_number_neg_with_garbage_at_end.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[-1x]
stdout ---

stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:4
  |
1 | [-1x]
  |    ^
