tests/integration/snapshots/integration__conformance__n_number_real_garbage_after_e.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
[1ea]
stdout ---

stderr ---
error: expected +/- or digit after exponent indicator, found `a`
 --> stdin:1:4
  |
1 | [1ea]
  |   -^
  |   |
  |   exponent found here
