tests/integration/snapshots/integration__conformance__n_number_real_with_invalid_utf8_after_e.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [91, 49, 101, 229, 93]
stdout ---

stderr ---
error: expected a continuation byte, found 0x5D
 --> stdin:1:4
  |
1 | [1e�]
  |    ^
