tests/integration/snapshots/integration__conformance__n_number_starting_with_dot.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
[.123]
stderr ---
error: unexpected character `.`. expected start of a json value
 --> stdin:1:2
  |
1 | [.123]
  |  ^
